	PR c++/47049 	* semantics.c (maybe_add_lambda_conv_op): Fix COMDAT sharing. 	* decl.c (start_preparsed_function): Don't call comdat_linkage for 	a template.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@174375 138bc75d-0d04-0410-961f-82ee72b054a4